Added n8n-workflow to peer deps

--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "tsdav": "^2.1.2",
     "uuid": "^11.0.3",
     "vcf": "^2.1.2"
+  },
+  "peerDependencies": {
+    "n8n-workflow": "^1.48.0"
   }
 }
